# Komsi2Tacho

./: .gitignore  Cargo.toml  PINOUT.de.md  PINOUT.en.md  PINOUT.md  README.de.md  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: can.rs  commands.rs  komsi.rs  lib.rs  time.rs
