[package]
name = "komsi2tacho"
edition = "2024"
rust-version = "1.88"
version = "1.1.8"
authors = ["ThatZok <af@komplix.de>"]
license = "GPL-3.0-or-later"


[[bin]]
name = "komsi2tacho"
path = "./src/bin/main.rs"

[lints.clippy]
# deny dangerous patterns (should be allowed in tests, we do want panics in tests as feedback)
unwrap_used = "warn"  # warn instead of deny for fix check
todo = "deny"         # we should be finished before publishing
dbg_macro = "deny"    # no remaining debug output in production
panic = "deny"        # panics() in production are bad
similar_names = "allow"

[dependencies]
# j1939 = { git = "https://github.com/thatzok/J1939" }
j1939 = "0.3"
portable-atomic = { version = "1.0", features = ["critical-section"] }

esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }
embedded-can = "0.4.1"

esp-rtos = { version = "0.2.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp32c6",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

embedded-io-async = "0.6.1"
spin = "0.10.0"
embassy-sync = "0.6.2"
embassy-futures = "0.1.1"
heapless = "0.8.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
